// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table data missing 1`] = `
"<div class=\\"c-table-wrapper\\">
  <table border=\\"true\\" class=\\"c-table\\">
    <tr class=\\"c-table-header\\">
      <th class=\\"c-table-header__item\\" style=\\"width: 200px;\\"><span class=\\"c-table-header__item__text\\">name</span></th>
      <th class=\\"c-table-header__item\\" style=\\"width: auto;\\"><span class=\\"c-table-header__item__text\\">age</span></th>
    </tr>
    <div class=\\"c-table-empty\\">
      <div id=\\"c-table-empty__text\\">空数据</div>
    </div>
  </table>
</div>"
`;

exports[`Table emptyData 1`] = `
VueWrapper {
  "_emitted": Object {
    "hook:beforeMount": Array [
      Array [],
    ],
    "hook:created": Array [
      Array [],
    ],
    "hook:mounted": Array [
      Array [],
    ],
  },
  "_emittedByOrder": Array [
    Object {
      "args": Array [],
      "name": "hook:created",
    },
    Object {
      "args": Array [],
      "name": "hook:beforeMount",
    },
    Object {
      "args": Array [],
      "name": "hook:mounted",
    },
  ],
  "isFunctionalComponent": undefined,
}
`;

exports[`Table loadData 1`] = `
"<div class=\\"c-table-wrapper\\">
  <table border=\\"true\\" class=\\"c-table\\">
    <tr class=\\"c-table-header\\">
      <th class=\\"c-table-header__item\\" style=\\"width: 200px;\\"><span class=\\"c-table-header__item__text\\">name</span></th>
      <th class=\\"c-table-header__item\\" style=\\"width: auto;\\"><span class=\\"c-table-header__item__text\\">age</span></th>
    </tr>
    <div class=\\"c-table-empty\\">
      <div id=\\"c-table-empty__text\\">空数据</div>
    </div>
  </table>
</div>"
`;

exports[`Table loadData 2`] = `
"<div class=\\"c-table-wrapper\\">
  <table border=\\"true\\" class=\\"c-table\\">
    <tr class=\\"c-table-header\\">
      <th class=\\"c-table-header__item\\" style=\\"width: 200px;\\"><span class=\\"c-table-header__item__text\\">name</span></th>
      <th class=\\"c-table-header__item\\" style=\\"width: auto;\\"><span class=\\"c-table-header__item__text\\">age</span></th>
    </tr>
    <tbody class=\\"c-table-body\\">
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">张三</td>
        <td class=\\"c-table-body__row__cell\\">14</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">李四</td>
        <td class=\\"c-table-body__row__cell\\">16</td>
      </tr>
    </tbody>
  </table>
</div>"
`;

exports[`Table render 1`] = `
"<div class=\\"c-table-wrapper\\">
  <table border=\\"true\\" class=\\"c-table\\">
    <tr class=\\"c-table-header\\">
      <th class=\\"c-table-header__item\\" style=\\"width: 200px;\\"><span class=\\"c-table-header__item__text\\">name</span></th>
      <th class=\\"c-table-header__item\\" style=\\"width: auto;\\"><span class=\\"c-table-header__item__text\\">age</span></th>
    </tr>
    <div class=\\"c-table-empty\\">
      <div id=\\"c-table-empty__text\\">空数据</div>
    </div>
  </table>
</div>"
`;

exports[`pager pager's over limit options 1`] = `
"<div class=\\"c-table-wrapper\\">
  <table border=\\"true\\" class=\\"c-table\\">
    <tr class=\\"c-table-header\\">
      <th class=\\"c-table-header__item\\" style=\\"width: 200px;\\"><span class=\\"c-table-header__item__text\\">name</span></th>
      <th class=\\"c-table-header__item\\" style=\\"width: auto;\\"><span class=\\"c-table-header__item__text\\">age</span></th>
    </tr>
    <tbody class=\\"c-table-body\\">
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">0</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">1</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -2</td>
        <td class=\\"c-table-body__row__cell\\">2</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">3</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -4</td>
        <td class=\\"c-table-body__row__cell\\">4</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">5</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -6</td>
        <td class=\\"c-table-body__row__cell\\">6</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">7</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -8</td>
        <td class=\\"c-table-body__row__cell\\">8</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">9</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -10</td>
        <td class=\\"c-table-body__row__cell\\">10</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">11</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -12</td>
        <td class=\\"c-table-body__row__cell\\">12</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">13</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -14</td>
        <td class=\\"c-table-body__row__cell\\">14</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">15</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -16</td>
        <td class=\\"c-table-body__row__cell\\">16</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">17</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -18</td>
        <td class=\\"c-table-body__row__cell\\">18</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">19</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -20</td>
        <td class=\\"c-table-body__row__cell\\">20</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">21</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -22</td>
        <td class=\\"c-table-body__row__cell\\">22</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">23</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -24</td>
        <td class=\\"c-table-body__row__cell\\">24</td>
      </tr>
    </tbody>
  </table>
  <dl class=\\"c-pager\\">
    <dd class=\\"c-pager__item c-pager__item--current\\"><span class=\\"c-pager__item__no\\">1</span></dd>
    <dd class=\\"c-pager__item \\"><a class=\\"c-pager__item__no\\">2</a></dd>
    <dd class=\\"c-pager__item \\"><a class=\\"c-pager__item__no\\">3</a></dd>
    <dd class=\\"c-pager__item \\"><a class=\\"c-pager__item__no\\">4</a></dd>
    <dd class=\\"c-pager__item c-pager__go-end\\"><a class=\\"c-pager__item__no\\">&gt;&gt;</a></dd>
  </dl>
</div>"
`;

exports[`pager render 1`] = `
"<div class=\\"c-table-wrapper\\">
  <table border=\\"true\\" class=\\"c-table\\">
    <tr class=\\"c-table-header\\">
      <th class=\\"c-table-header__item\\" style=\\"width: 200px;\\"><span class=\\"c-table-header__item__text\\">name</span></th>
      <th class=\\"c-table-header__item\\" style=\\"width: auto;\\"><span class=\\"c-table-header__item__text\\">age</span></th>
    </tr>
    <tbody class=\\"c-table-body\\">
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">0</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">1</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -2</td>
        <td class=\\"c-table-body__row__cell\\">2</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">3</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -4</td>
        <td class=\\"c-table-body__row__cell\\">4</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">5</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -6</td>
        <td class=\\"c-table-body__row__cell\\">6</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">7</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -8</td>
        <td class=\\"c-table-body__row__cell\\">8</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">9</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -10</td>
        <td class=\\"c-table-body__row__cell\\">10</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">11</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -12</td>
        <td class=\\"c-table-body__row__cell\\">12</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">13</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -14</td>
        <td class=\\"c-table-body__row__cell\\">14</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">15</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -16</td>
        <td class=\\"c-table-body__row__cell\\">16</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">17</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -18</td>
        <td class=\\"c-table-body__row__cell\\">18</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">19</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -20</td>
        <td class=\\"c-table-body__row__cell\\">20</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">21</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -22</td>
        <td class=\\"c-table-body__row__cell\\">22</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">23</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -24</td>
        <td class=\\"c-table-body__row__cell\\">24</td>
      </tr>
    </tbody>
  </table>
  <dl class=\\"c-pager\\">
    <dd class=\\"c-pager__item c-pager__item--current\\"><span class=\\"c-pager__item__no\\">1</span></dd>
    <dd class=\\"c-pager__item \\"><a class=\\"c-pager__item__no\\">2</a></dd>
    <dd class=\\"c-pager__item \\"><a class=\\"c-pager__item__no\\">3</a></dd>
    <dd class=\\"c-pager__item \\"><a class=\\"c-pager__item__no\\">4</a></dd>
    <dd class=\\"c-pager__item c-pager__go-end\\"><a class=\\"c-pager__item__no\\">&gt;&gt;</a></dd>
  </dl>
</div>"
`;

exports[`pager render 2`] = `
"<div class=\\"c-table-wrapper\\">
  <table border=\\"true\\" class=\\"c-table\\">
    <tr class=\\"c-table-header\\">
      <th class=\\"c-table-header__item\\" style=\\"width: 200px;\\"><span class=\\"c-table-header__item__text\\">name</span></th>
      <th class=\\"c-table-header__item\\" style=\\"width: auto;\\"><span class=\\"c-table-header__item__text\\">age</span></th>
    </tr>
    <tbody class=\\"c-table-body\\">
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">25</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -26</td>
        <td class=\\"c-table-body__row__cell\\">26</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">27</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -28</td>
        <td class=\\"c-table-body__row__cell\\">28</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">29</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -30</td>
        <td class=\\"c-table-body__row__cell\\">30</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">31</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -32</td>
        <td class=\\"c-table-body__row__cell\\">32</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">33</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -34</td>
        <td class=\\"c-table-body__row__cell\\">34</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">35</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -36</td>
        <td class=\\"c-table-body__row__cell\\">36</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">37</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -38</td>
        <td class=\\"c-table-body__row__cell\\">38</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">39</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -40</td>
        <td class=\\"c-table-body__row__cell\\">40</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">41</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -42</td>
        <td class=\\"c-table-body__row__cell\\">42</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">43</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -44</td>
        <td class=\\"c-table-body__row__cell\\">44</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">45</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -46</td>
        <td class=\\"c-table-body__row__cell\\">46</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">47</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -48</td>
        <td class=\\"c-table-body__row__cell\\">48</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">49</td>
      </tr>
    </tbody>
  </table>
  <dl class=\\"c-pager\\">
    <dd class=\\"c-pager__item c-pager__go-first\\"><a class=\\"c-pager__item__no\\">&lt;&lt;</a></dd>
    <dd class=\\"c-pager__item \\"><a class=\\"c-pager__item__no\\">1</a></dd>
    <dd class=\\"c-pager__item c-pager__item--current\\"><span class=\\"c-pager__item__no\\">2</span></dd>
    <dd class=\\"c-pager__item \\"><a class=\\"c-pager__item__no\\">3</a></dd>
    <dd class=\\"c-pager__item \\"><a class=\\"c-pager__item__no\\">4</a></dd>
    <dd class=\\"c-pager__item c-pager__go-end\\"><a class=\\"c-pager__item__no\\">&gt;&gt;</a></dd>
  </dl>
</div>"
`;

exports[`pager render 3`] = `
"<div class=\\"c-table-wrapper\\">
  <table border=\\"true\\" class=\\"c-table\\">
    <tr class=\\"c-table-header\\">
      <th class=\\"c-table-header__item\\" style=\\"width: 200px;\\"><span class=\\"c-table-header__item__text\\">name</span></th>
      <th class=\\"c-table-header__item\\" style=\\"width: auto;\\"><span class=\\"c-table-header__item__text\\">age</span></th>
    </tr>
    <tbody class=\\"c-table-body\\">
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">25</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -26</td>
        <td class=\\"c-table-body__row__cell\\">26</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">27</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -28</td>
        <td class=\\"c-table-body__row__cell\\">28</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">29</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -30</td>
        <td class=\\"c-table-body__row__cell\\">30</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">31</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -32</td>
        <td class=\\"c-table-body__row__cell\\">32</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">33</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -34</td>
        <td class=\\"c-table-body__row__cell\\">34</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">35</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -36</td>
        <td class=\\"c-table-body__row__cell\\">36</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">37</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -38</td>
        <td class=\\"c-table-body__row__cell\\">38</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">39</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -40</td>
        <td class=\\"c-table-body__row__cell\\">40</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">41</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -42</td>
        <td class=\\"c-table-body__row__cell\\">42</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">43</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -44</td>
        <td class=\\"c-table-body__row__cell\\">44</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">45</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -46</td>
        <td class=\\"c-table-body__row__cell\\">46</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">47</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -48</td>
        <td class=\\"c-table-body__row__cell\\">48</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">49</td>
      </tr>
    </tbody>
  </table>
  <dl class=\\"c-pager\\">
    <dd class=\\"c-pager__item c-pager__item--current\\"><span class=\\"c-pager__item__no\\">1</span></dd>
    <dd class=\\"c-pager__item \\"><a class=\\"c-pager__item__no\\">2</a></dd>
    <dd class=\\"c-pager__item \\"><a class=\\"c-pager__item__no\\">3</a></dd>
    <dd class=\\"c-pager__item \\"><a class=\\"c-pager__item__no\\">4</a></dd>
    <dd class=\\"c-pager__item c-pager__go-end\\"><a class=\\"c-pager__item__no\\">&gt;&gt;</a></dd>
  </dl>
</div>"
`;

exports[`pager render 4`] = `
"<div class=\\"c-table-wrapper\\">
  <table border=\\"true\\" class=\\"c-table\\">
    <tr class=\\"c-table-header\\">
      <th class=\\"c-table-header__item\\" style=\\"width: 200px;\\"><span class=\\"c-table-header__item__text\\">name</span></th>
      <th class=\\"c-table-header__item\\" style=\\"width: auto;\\"><span class=\\"c-table-header__item__text\\">age</span></th>
    </tr>
    <tbody class=\\"c-table-body\\">
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">75</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -76</td>
        <td class=\\"c-table-body__row__cell\\">76</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">77</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -78</td>
        <td class=\\"c-table-body__row__cell\\">78</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">79</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -80</td>
        <td class=\\"c-table-body__row__cell\\">80</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">81</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -82</td>
        <td class=\\"c-table-body__row__cell\\">82</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">83</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -84</td>
        <td class=\\"c-table-body__row__cell\\">84</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">85</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -86</td>
        <td class=\\"c-table-body__row__cell\\">86</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">87</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -88</td>
        <td class=\\"c-table-body__row__cell\\">88</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">89</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -90</td>
        <td class=\\"c-table-body__row__cell\\">90</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">91</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -92</td>
        <td class=\\"c-table-body__row__cell\\">92</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">93</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -94</td>
        <td class=\\"c-table-body__row__cell\\">94</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">95</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -96</td>
        <td class=\\"c-table-body__row__cell\\">96</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">97</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test -98</td>
        <td class=\\"c-table-body__row__cell\\">98</td>
      </tr>
      <tr class=\\"c-table-body__row\\">
        <td class=\\"c-table-body__row__cell\\">test 0</td>
        <td class=\\"c-table-body__row__cell\\">99</td>
      </tr>
    </tbody>
  </table>
  <dl class=\\"c-pager\\">
    <dd class=\\"c-pager__item c-pager__go-first\\"><a class=\\"c-pager__item__no\\">&lt;&lt;</a></dd>
    <dd class=\\"c-pager__item \\"><a class=\\"c-pager__item__no\\">1</a></dd>
    <dd class=\\"c-pager__item \\"><a class=\\"c-pager__item__no\\">2</a></dd>
    <dd class=\\"c-pager__item \\"><a class=\\"c-pager__item__no\\">3</a></dd>
    <dd class=\\"c-pager__item c-pager__item--current\\"><span class=\\"c-pager__item__no\\">4</span></dd>
  </dl>
</div>"
`;

exports[`slot cell slot 1`] = `
"<div class=\\"c-table-wrapper\\">
  <table border=\\"true\\" class=\\"c-table\\">
    <tr class=\\"c-table-header\\">
      <th class=\\"c-table-header__item\\" style=\\"width: 200px;\\"><span class=\\"c-table-header__item__text\\">name</span></th>
      <th class=\\"c-table-header__item\\" style=\\"width: auto;\\"><span class=\\"c-table-header__item__text\\">age</span></th>
    </tr>
    <div class=\\"c-table-empty\\">
      <div id=\\"c-table-empty__text\\">空数据</div>
    </div>
  </table>
</div>"
`;

exports[`slot custom cell slot name 1`] = `
"<div class=\\"c-table-wrapper\\">
  <table border=\\"true\\" class=\\"c-table\\">
    <tr class=\\"c-table-header\\">
      <th class=\\"c-table-header__item\\" style=\\"width: 200px;\\"><span class=\\"c-table-header__item__text\\">name</span></th>
      <th class=\\"c-table-header__item\\" style=\\"width: auto;\\"><span class=\\"c-table-header__item__text\\">age</span></th>
    </tr>
    <div class=\\"c-table-empty\\">
      <div id=\\"c-table-empty__text\\">空数据</div>
    </div>
  </table>
</div>"
`;

exports[`slot title slot 1`] = `
"<div class=\\"c-table-wrapper\\">
  <table border=\\"true\\" class=\\"c-table\\">
    <tr class=\\"c-table-header\\">
      <th class=\\"c-table-header__item\\" style=\\"width: 200px;\\"><span class=\\"c-table-header__item__text\\">nameSlot</span></th>
      <th class=\\"c-table-header__item\\" style=\\"width: auto;\\"><span class=\\"c-table-header__item__text\\">age</span></th>
    </tr>
    <div class=\\"c-table-empty\\">
      <div id=\\"c-table-empty__text\\">空数据</div>
    </div>
  </table>
</div>"
`;

exports[`sort default sort 1`] = `
"<div class=\\"c-table-wrapper\\">
  <table border=\\"true\\" class=\\"c-table\\">
    <tr class=\\"c-table-header\\">
      <th class=\\"c-table-header__item\\" style=\\"width: auto;\\"><span class=\\"c-table-header__item__text\\">name</span></th>
      <th class=\\"c-table-header__item\\" style=\\"width: auto;\\"><span class=\\"c-table-header__item__text\\">age</span></th>
    </tr>
    <div class=\\"c-table-empty\\">
      <div id=\\"c-table-empty__text\\">空数据</div>
    </div>
  </table>
</div>"
`;

exports[`sort default sort 2`] = `"<th class=\\"c-table-header__item\\" style=\\"width: auto;\\"><span class=\\"c-table-header__item__text\\">name</span><span class=\\"table-sort-arrow desc c-table-header__item__icon\\"></span></th>"`;

exports[`sort default sort 3`] = `"<th class=\\"c-table-header__item\\" style=\\"width: auto;\\"><span class=\\"c-table-header__item__text\\">name</span></th>"`;

exports[`sort default sort 4`] = `"<th class=\\"c-table-header__item\\" style=\\"width: auto;\\"><span class=\\"c-table-header__item__text\\">name</span><span class=\\"table-sort-arrow asc c-table-header__item__icon\\"></span></th>"`;

exports[`sort sort 1`] = `
"<div class=\\"c-table-wrapper\\">
  <table border=\\"true\\" class=\\"c-table\\">
    <tr class=\\"c-table-header\\">
      <th class=\\"c-table-header__item\\" style=\\"width: 200px;\\"><span class=\\"c-table-header__item__text\\">name</span></th>
      <th class=\\"c-table-header__item\\" style=\\"width: auto;\\"><span class=\\"c-table-header__item__text\\">age</span></th>
    </tr>
    <div class=\\"c-table-empty\\">
      <div id=\\"c-table-empty__text\\">空数据</div>
    </div>
  </table>
</div>"
`;

exports[`sort sort 2`] = `"<th class=\\"c-table-header__item\\" style=\\"width: 200px;\\"><span class=\\"c-table-header__item__text\\">name</span><span class=\\"table-sort-arrow asc c-table-header__item__icon\\"></span></th>"`;

exports[`sort sort 3`] = `"<th class=\\"c-table-header__item\\" style=\\"width: 200px;\\"><span class=\\"c-table-header__item__text\\">name</span><span class=\\"table-sort-arrow desc c-table-header__item__icon\\"></span></th>"`;

exports[`sort sort 4`] = `"<th class=\\"c-table-header__item\\" style=\\"width: 200px;\\"><span class=\\"c-table-header__item__text\\">name</span></th>"`;

exports[`sort sort 5`] = `"<th class=\\"c-table-header__item\\" style=\\"width: 200px;\\"><span class=\\"c-table-header__item__text\\">name</span><span class=\\"table-sort-arrow asc c-table-header__item__icon\\"></span></th>"`;

exports[`sort sort not sortable column 1`] = `
"<div class=\\"c-table-wrapper\\">
  <table border=\\"true\\" class=\\"c-table\\">
    <tr class=\\"c-table-header\\">
      <th class=\\"c-table-header__item\\" style=\\"width: 200px;\\"><span class=\\"c-table-header__item__text\\">name</span></th>
      <th class=\\"c-table-header__item\\" style=\\"width: auto;\\"><span class=\\"c-table-header__item__text\\">age</span></th>
    </tr>
    <div class=\\"c-table-empty\\">
      <div id=\\"c-table-empty__text\\">空数据</div>
    </div>
  </table>
</div>"
`;

exports[`sort sort not sortable column 2`] = `"<th class=\\"c-table-header__item\\" style=\\"width: auto;\\"><span class=\\"c-table-header__item__text\\">age</span></th>"`;
